--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>    
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://christiancharlotteconcrete.github.io/The-Benefits-of-Timely-Concrete-and-Foundation-Repair/">https://christiancharlotteconcrete.github.io/The-Benefits-of-Timely-Concrete-and-Foundation-Repair/</a><br>    
+                <a target="_bLank" href="https://christiancharlotteconcrete.s3.us-east-005.backblazeb2.com/The+Benefits+of+Timely+Concrete+and+Foundation+Repair/index.html">https://christiancharlotteconcrete.s3.us-east-005.backblazeb2.com/The+Benefits+of+Timely+Concrete+and+Foundation+Repair/index.html</a><br>
+                <a target="_bLank" href="https://the-benefits-of-git-420783-christiancharlotteconcretes-projects.vercel.app/">https://the-benefits-of-git-420783-christiancharlotteconcretes-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://jade-jalebi-741e81.netlify.app">https://jade-jalebi-741e81.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
